Issue #8. Unit tests mostly adapted to new code
- There are still a few issues around the serializers
- autoboxing of primitive types causes some issues