@@ -10,46 +10,42 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
 
-import org.djutils.immutablecollections.ImmutableList;
-import org.djutils.immutablecollections.ImmutableMap;
 import org.djutils.primitives.Primitive;
 import org.junit.Test;
 
 /**
- * TestListTable tests the functions of the ListTable, the Column and the Record. <br>
- * <br>
- * Copyright (c) 2020-2023 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
- * for project information <a href="https://djutils.org" target="_blank"> https://djutils.org</a>. The DJUTILS project is
- * distributed under a three-clause BSD-style license, which can be found at
- * <a href="https://djutils.org/docs/license.html" target="_blank"> https://djutils.org/docs/license.html</a>. <br>
- * @author <a href="https://www.tudelft.nl/averbraeck">Alexander Verbraeck</a>
- * @author <a href="https://www.tudelft.nl/pknoppers">Peter Knoppers</a>
- * @author <a href="http://www.transport.citg.tudelft.nl">Wouter Schakel</a>
+ * TestListTable tests the functions of the ListTable, the Column and the Record.
+ * <p>
+ * Copyright (c) 2020-2023 Delft University of Technology, PO Box 5, 2600 AA, Delft, the Netherlands. All rights reserved. <br>
+ * BSD-style license. See <a href="https://djutils.org/docs/current/djutils/licenses.html">DJUTILS License</a>.
+ * </p>
+ * @author <a href="https://github.com/averbraeck">Alexander Verbraeck</a>
+ * @author <a href="https://tudelft.nl/staff/p.knoppers-1">Peter Knoppers</a>
+ * @author <a href="https://dittlab.tudelft.nl">Wouter Schakel</a>
  */
-public class TestListDataTable
+public class TestListTable
 {
     /** Test the ListTable, the Column and the Record. */
     @Test
     public void testListTable()
     {
-        DataColumn<Integer> column1 = new SimpleDataColumn<>("time", "time rounded to second [s]", int.class);
-        DataColumn<Double> column2 = new SimpleDataColumn<>("value", "measured value [m]", double.class);
-        DataColumn<String> column3 = new SimpleDataColumn<>("remark", "remark about the measurement", String.class);
+        Column<Integer> column1 = new Column<>("time", "time rounded to second [s]", int.class, "");
+        Column<Double> column2 = new Column<>("value", "measured value [m]", double.class, "");
+        Column<String> column3 = new Column<>("remark", "remark about the measurement", String.class, "");
 
         assertEquals("time", column1.getId());
         assertEquals("time rounded to second [s]", column1.getDescription());
         assertEquals(int.class, column1.getValueType());
 
-        List<DataColumn<?>> columns = new ArrayList<>();
+        List<Column<?>> columns = new ArrayList<>();
         columns.add(column1);
         columns.add(column2);
         columns.add(column3);
-        ListDataTable table = new ListDataTable("tableId", "tableDescription", columns);
+        ListTable table = new ListTable("tableId", "tableDescription", columns);
 
         assertEquals("tableId", table.getId());
         assertEquals("tableDescription", table.getDescription());
@@ -63,38 +59,33 @@ public class TestListDataTable
 
         // add some data
         assertTrue(table.isEmpty());
-        table.addRecord(new Object[] {2, 5.0, "normal"});
+        table.addRow(new Object[] {2, 5.0, "normal"});
         assertFalse(table.isEmpty());
-        Map<DataColumn<?>, Object> cdata = new LinkedHashMap<>();
-        cdata.put(column3, "second");
-        cdata.put(column2, 7.7);
-        cdata.put(column1, 4);
-        table.addRecordByColumns(cdata);
         Map<String, Object> idata = new TreeMap<>();
         idata.put("time", 6);
         idata.put("value", 9.12);
         idata.put("remark", "third");
-        table.addRecordByColumnIds(idata);
-        
-        DataRecord record = table.iterator().next();
+        table.addRowByColumnIds(idata);
+
+        Row record = table.iterator().next();
         assertArrayEquals(new Object[] {2, 5.0, "normal"}, record.getValues());
 
-        DataColumn<Double> c1 = new SimpleDataColumn<>("x", "x", double.class);
-        DataColumn<double[][]> c2 = new SimpleDataColumn<>("y", "y", double[][].class);
-        ListDataTable txy = new ListDataTable("xy[][]", "x, y[][]", ImmutableList.of(c1, c2));
+        Column<Double> c1 = new Column<>("x", "x", double.class, "");
+        Column<double[][]> c2 = new Column<>("y", "y", double[][].class, "");
+        ListTable txy = new ListTable("xy[][]", "x, y[][]", List.of(c1, c2));
         assertArrayEquals(new String[] {"x", "y"}, txy.getColumnIds());
         assertArrayEquals(new String[] {"x", "y"}, txy.getColumnDescriptions());
         assertArrayEquals(new Class<?>[] {double.class, double[][].class}, txy.getColumnDataTypes());
         assertArrayEquals(new String[] {"double", "[[D"}, txy.getColumnDataTypeStrings());
-        
+
         String tableString = table.toString();
-        assertTrue(tableString.startsWith("ListDataTable"));
+        assertTrue(tableString.startsWith("ListTable"));
         assertTrue(tableString.contains("tableId"));
         assertTrue(tableString.contains("tableDescription"));
-        assertTrue(tableString.contains("SimpleDataColumn"));
-        
+        assertTrue(tableString.contains("Column"));
+
         String recordString = table.iterator().next().toString();
-        assertTrue(recordString.startsWith("ListDataTable.ListRecord"));
+        assertTrue(recordString.startsWith("ListTable.ListRecord"));
         assertTrue(recordString.contains("time = 2"));
         assertTrue(recordString.contains("value = 5.0"));
     }
@@ -104,57 +95,45 @@ public class TestListDataTable
     public void testSubclassListTable()
     {
         // table with double column
-        DataColumn<Double> column = new SimpleDataColumn<>("value", "measured value", double.class);
-        List<DataColumn<?>> columns = new ArrayList<>();
+        Column<Double> column = new Column<>("value", "measured value", double.class, "");
+        List<Column<?>> columns = new ArrayList<>();
         columns.add(column);
-        ListDataTable table = new ListDataTable("tableId", "tableDescription", columns);
+        ListTable table = new ListTable("tableId", "tableDescription", columns);
 
         // try double arguments in double column
-        table.addRecord(new Object[] {5.0});
-        Map<DataColumn<?>, Object> cdata = new LinkedHashMap<>();
-        cdata.put(column, 7.7);
-        table.addRecordByColumns(cdata);
+        table.addRow(new Object[] {5.0});
         Map<String, Object> idata = new TreeMap<>();
         idata.put("value", 9.12);
-        table.addRecordByColumnIds(idata);
+        table.addRowByColumnIds(idata);
 
         // try Double arguments in double column
-        ListDataTable table2 = new ListDataTable("tableId", "tableDescription", columns);
-        table2.addRecord(new Object[] {Double.valueOf(5.0)});
-        cdata = new LinkedHashMap<>();
-        cdata.put(column, Double.valueOf(7.7));
-        table2.addRecordByColumns(cdata);
+        ListTable table2 = new ListTable("tableId", "tableDescription", columns);
+        table2.addRow(new Object[] {Double.valueOf(5.0)});
         idata = new TreeMap<>();
         idata.put("value", Double.valueOf(9.12));
-        table2.addRecordByColumnIds(idata);
+        table2.addRowByColumnIds(idata);
 
         // compare both tables
         tableCompare(table, table2);
 
         // table with Number column
-        DataColumn<Number> nColumn = new SimpleDataColumn<>("value", "measured value", Number.class);
-        List<DataColumn<?>> nColumns = new ArrayList<>();
+        Column<Number> nColumn = new Column<>("value", "measured value", Number.class, "");
+        List<Column<?>> nColumns = new ArrayList<>();
         nColumns.add(nColumn);
-        ListDataTable nTable = new ListDataTable("tableId", "tableDescription", nColumns);
+        ListTable nTable = new ListTable("tableId", "tableDescription", nColumns);
 
         // try double arguments in Number column
-        nTable.addRecord(new Object[] {5.0});
-        Map<DataColumn<?>, Object> cndata = new LinkedHashMap<>();
-        cndata.put(nColumn, 7.7);
-        nTable.addRecordByColumns(cndata);
+        nTable.addRow(new Object[] {5.0});
         Map<String, Object> indata = new TreeMap<>();
         indata.put("value", 9.12);
-        nTable.addRecordByColumnIds(indata);
+        nTable.addRowByColumnIds(indata);
 
         // try Double arguments in Number column
-        ListDataTable nTable2 = new ListDataTable("tableId", "tableDescription", nColumns);
-        nTable2.addRecord(new Object[] {Double.valueOf(5.0)});
-        cndata = new LinkedHashMap<>();
-        cndata.put(nColumn, Double.valueOf(7.7));
-        nTable2.addRecordByColumns(cndata);
+        ListTable nTable2 = new ListTable("tableId", "tableDescription", nColumns);
+        nTable2.addRow(new Object[] {Double.valueOf(5.0)});
         indata = new TreeMap<>();
         indata.put("value", Double.valueOf(9.12));
-        nTable2.addRecordByColumnIds(indata);
+        nTable2.addRowByColumnIds(indata);
 
         // compare both tables
         tableCompare(nTable, nTable2);
@@ -166,7 +145,7 @@ public class TestListDataTable
      * @param table1 the first table
      * @param table2 the second table
      */
-    public static void tableCompare(final ListDataTable table1, final ListDataTable table2)
+    public static void tableCompare(final ListTable table1, final ListTable table2)
     {
         assertEquals(table1.getColumns().size(), table2.getColumns().size());
         assertEquals(table1.getId(), table2.getId());
@@ -175,22 +154,22 @@ public class TestListDataTable
         assertEquals(table1.getColumns().size(), table2.getColumns().size());
         for (int i = 0; i < table1.getColumns().size(); i++)
         {
-            DataColumn<?> c1 = table1.getColumns().get(i);
-            DataColumn<?> c2 = table2.getColumns().get(i);
+            Column<?> c1 = table1.getColumns().get(i);
+            Column<?> c2 = table2.getColumns().get(i);
             assertEquals(c1.getId(), c2.getId());
             assertEquals(c1.getDescription(), c2.getDescription());
             assertTrue(Primitive.isPrimitiveAssignableFrom(c1.getValueType(), c2.getValueType()));
             assertTrue(Primitive.isPrimitiveAssignableFrom(c2.getValueType(), c1.getValueType()));
         }
 
-        Iterator<DataRecord> it2 = table2.iterator();
-        for (DataRecord r1 : table1)
+        Iterator<Row> it2 = table2.iterator();
+        for (Row r1 : table1)
         {
             assertTrue(it2.hasNext());
-            DataRecord r2 = it2.next();
+            Row r2 = it2.next();
             for (int i = 0; i < table1.getColumns().size(); i++)
             {
-                DataColumn<?> c1 = table1.getColumns().get(i);
+                Column<?> c1 = table1.getColumns().get(i);
                 String c2id = table2.getColumns().get(i).getId();
                 Object v1 = r1.getValue(c1);
                 Object v2 = r2.getValue(c2id);
@@ -204,10 +183,10 @@ public class TestListDataTable
     @Test
     public void testIllegalColumnTable()
     {
-        DataColumn<Integer> column1 = new SimpleDataColumn<>("time", "time, rounded to second [s]", int.class);
-        DataColumn<Double> column2 = new SimpleDataColumn<>("value", "measured value [m]", double.class);
-        DataColumn<String> column3 = new SimpleDataColumn<>("remark", "remark about the measurement", String.class);
-        List<DataColumn<?>> columns = new ArrayList<>();
+        Column<Integer> column1 = new Column<>("time", "time, rounded to second [s]", int.class, "");
+        Column<Double> column2 = new Column<>("value", "measured value [m]", double.class, "");
+        Column<String> column3 = new Column<>("remark", "remark about the measurement", String.class, "");
+        List<Column<?>> columns = new ArrayList<>();
         columns.add(column1);
         columns.add(column2);
         columns.add(column3);
@@ -218,7 +197,7 @@ public class TestListDataTable
 
         try
         {
-            new SimpleDataColumn<>(null, "measured value [m]", double.class);
+            new Column<>(null, "measured value [m]", double.class, "");
             fail("null id should have thrown NullPointerException");
         }
         catch (NullPointerException npe)
@@ -227,7 +206,7 @@ public class TestListDataTable
         }
         try
         {
-            new SimpleDataColumn<>("value", null, double.class);
+            new Column<>("value", null, double.class, "");
             fail("null description should have thrown NullPointerException");
         }
         catch (NullPointerException npe)
@@ -236,7 +215,7 @@ public class TestListDataTable
         }
         try
         {
-            new SimpleDataColumn<>("value", "measured value [m]", null);
+            new Column<>("value", "measured value [m]", null, "");
             fail("null valueType should have thrown NullPointerException");
         }
         catch (NullPointerException npe)
@@ -245,7 +224,7 @@ public class TestListDataTable
         }
         try
         {
-            new SimpleDataColumn<>("", "measured value [m]", double.class);
+            new Column<>("", "measured value [m]", double.class, "");
             fail("empty id should have thrown IllegalArgumentException");
         }
         catch (IllegalArgumentException iae)
@@ -257,13 +236,13 @@ public class TestListDataTable
         // test illegal tables
         //
 
-        List<DataColumn<?>> cx = new ArrayList<>();
+        List<Column<?>> cx = new ArrayList<>();
         cx.add(column1);
         cx.add(column1); // duplicate
         cx.add(column3);
         try
         {
-            new ListDataTable("tableId", "tableDescription", cx);
+            new ListTable("tableId", "tableDescription", cx);
             fail("duplicate column should have thrown IllegalArgumentException");
         }
         catch (IllegalArgumentException iae)
@@ -273,11 +252,11 @@ public class TestListDataTable
 
         cx = new ArrayList<>();
         cx.add(column1);
-        cx.add(new SimpleDataColumn<>("time", "another timestamp", double.class));
+        cx.add(new Column<>("time", "another timestamp", double.class, ""));
         cx.add(column3);
         try
         {
-            new ListDataTable("tableId", "tableDescription", cx);
+            new ListTable("tableId", "tableDescription", cx);
             fail("duplicate column id should have thrown IllegalArgumentException");
         }
         catch (IllegalArgumentException iae)
@@ -287,7 +266,7 @@ public class TestListDataTable
 
         try
         {
-            new ListDataTable(null, "tableDescription", columns);
+            new ListTable(null, "tableDescription", columns);
             fail("null id should have thrown NullPointerException");
         }
         catch (NullPointerException iae)
@@ -297,7 +276,7 @@ public class TestListDataTable
 
         try
         {
-            new ListDataTable("", "tableDescription", columns);
+            new ListTable("", "tableDescription", columns);
             fail("empty id should have thrown IllegalArgumentException");
         }
         catch (IllegalArgumentException iae)
@@ -307,7 +286,7 @@ public class TestListDataTable
 
         try
         {
-            new ListDataTable("tableId", null, columns);
+            new ListTable("tableId", null, columns);
             fail("null id should have thrown NullPointerException");
         }
         catch (NullPointerException iae)
@@ -317,7 +296,7 @@ public class TestListDataTable
 
         try
         {
-            new ListDataTable("tableId", "tableDescription", (ImmutableList<DataColumn<?>>) null);
+            new ListTable("tableId", "tableDescription", (List<Column<?>>) null);
             fail("null columns should have thrown NullPointerException");
         }
         catch (NullPointerException iae)
@@ -327,7 +306,7 @@ public class TestListDataTable
 
         try
         {
-            new ListDataTable("tableId", "tableDescription", (Collection<DataColumn<?>>) null);
+            new ListTable("tableId", "tableDescription", (Collection<Column<?>>) null);
             fail("null columns should have thrown NullPointerException");
         }
         catch (NullPointerException iae)
@@ -337,7 +316,7 @@ public class TestListDataTable
 
         try
         {
-            new ListDataTable("tableId", "tableDescription", new ArrayList<DataColumn<?>>());
+            new ListTable("tableId", "tableDescription", new ArrayList<Column<?>>());
             fail("zero columns should have thrown IllegalArgumentException");
         }
         catch (IllegalArgumentException iae)
@@ -350,14 +329,14 @@ public class TestListDataTable
     @Test
     public void testIllegalRecordTable()
     {
-        DataColumn<Integer> column1 = new SimpleDataColumn<>("time", "time, rounded to second [s]", int.class);
-        DataColumn<Double> column2 = new SimpleDataColumn<>("value", "measured value [m]", double.class);
-        DataColumn<String> column3 = new SimpleDataColumn<>("remark", "remark about the measurement", String.class);
-        List<DataColumn<?>> columns = new ArrayList<>();
+        Column<Integer> column1 = new Column<>("time", "time, rounded to second [s]", int.class, "");
+        Column<Double> column2 = new Column<>("value", "measured value [m]", double.class, "");
+        Column<String> column3 = new Column<>("remark", "remark about the measurement", String.class, "");
+        List<Column<?>> columns = new ArrayList<>();
         columns.add(column1);
         columns.add(column2);
         columns.add(column3);
-        ListDataTable table = new ListDataTable("tableId", "tableDescription", columns);
+        ListTable table = new ListTable("tableId", "tableDescription", columns);
 
         //
         // test null data
@@ -365,7 +344,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecord((Object[]) null);
+            table.addRow((Object[]) null);
             fail("null data record should have raised exception");
         }
         catch (NullPointerException npe)
@@ -375,17 +354,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecordByColumnIds((Map<String, Object>) null);
-            fail("null data record should have raised exception");
-        }
-        catch (NullPointerException npe)
-        {
-            // ok
-        }
-
-        try
-        {
-            table.addRecordByColumns((Map<DataColumn<?>, Object>) null);
+            table.addRowByColumnIds((Map<String, Object>) null);
             fail("null data record should have raised exception");
         }
         catch (NullPointerException npe)
@@ -399,7 +368,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecord(new Object[] {});
+            table.addRow(new Object[] {});
             fail("empty data record should have raised exception");
         }
         catch (IllegalArgumentException iae)
@@ -409,17 +378,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecordByColumnIds(new HashMap<String, Object>());
-            fail("empty data record should have raised exception");
-        }
-        catch (IllegalArgumentException iae)
-        {
-            // ok
-        }
-
-        try
-        {
-            table.addRecordByColumns(new HashMap<DataColumn<?>, Object>());
+            table.addRowByColumnIds(new HashMap<String, Object>());
             fail("empty data record should have raised exception");
         }
         catch (IllegalArgumentException iae)
@@ -433,7 +392,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecord(new Object[] {1, 2, 3, 4});
+            table.addRow(new Object[] {1, 2, 3, 4});
             fail("too long data record should have raised exception");
         }
         catch (IllegalArgumentException iae)
@@ -443,18 +402,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecordByColumnIds(ImmutableMap.of("time", 3, "value", 3.5, "remark", "none", "extra", "xx"));
-            fail("too long data record should have raised exception");
-        }
-        catch (IllegalArgumentException iae)
-        {
-            // ok
-        }
-
-        try
-        {
-            DataColumn<String> column4 = new SimpleDataColumn<>("c4", "column 4", String.class);
-            table.addRecordByColumns(ImmutableMap.of(column1, 3, column2, 3.5, column3, "remark", column4, "xx"));
+            table.addRowByColumnIds(Map.of("time", 3, "value", 3.5, "remark", "none", "extra", "xx"));
             fail("too long data record should have raised exception");
         }
         catch (IllegalArgumentException iae)
@@ -468,7 +416,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecord(new Object[] {1, 2, 3});
+            table.addRow(new Object[] {1, 2, 3});
             fail("wrong type data record should have raised exception");
         }
         catch (IllegalArgumentException iae)
@@ -478,17 +426,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecordByColumnIds(ImmutableMap.of("time", 3, "value", 2L, "remark", "none"));
-            fail("wrong type data record should have raised exception");
-        }
-        catch (IllegalArgumentException iae)
-        {
-            // ok
-        }
-
-        try
-        {
-            table.addRecordByColumns(ImmutableMap.of(column1, 3, column2, 3.5, column3, 2L));
+            table.addRowByColumnIds(Map.of("time", 3, "value", 2L, "remark", "none"));
             fail("wrong type data record should have raised exception");
         }
         catch (IllegalArgumentException iae)
@@ -502,18 +440,7 @@ public class TestListDataTable
 
         try
         {
-            table.addRecordByColumnIds(ImmutableMap.of("time", 3, "remark", "none", "wrong", 3));
-            fail("wrong type data record should have raised exception");
-        }
-        catch (IllegalArgumentException iae)
-        {
-            // ok
-        }
-
-        try
-        {
-            DataColumn<String> column4 = new SimpleDataColumn<>("c4", "column 4", String.class);
-            table.addRecordByColumns(ImmutableMap.of(column1, 3, column2, 4.5, column4, "xx"));
+            table.addRowByColumnIds(Map.of("time", 3, "remark", "none", "wrong", 3));
             fail("wrong type data record should have raised exception");
         }
         catch (IllegalArgumentException iae)
